--- a/index.html
+++ b/index.html
@@ -138,23 +138,26 @@
             <div class="command-title">history --experience</div>
             <div class="timeline">
                 <div class="timeline-item">
-                    <div class="timeline-date">2025 - Present</div>
-                    <h3>Senior 3D Artist | Quantum Studios</h3>
+                    <div class="timeline-date">2024-2025</div>
+                    <h3>Senior 3D Artist</h3>
                     <p>Lead environment artist. Responsible for:</p>
                     <ul>
                         <li>- Material library development</li>
                         <li>- Lighting key scenes</li>
+                        <li>- LOD models</li>
+                        <li>- Developed shader systems</li>
+                        <li>- Implemented assets in Unity</li>
                     </ul>
                 </div>
 
                 <div class="timeline-item">
-                    <div class="timeline-date">2021 - 2025</div>
-                    <h3>3D Generalist | Neon Vector</h3>
+                    <div class="timeline-date">2021 - 2023</div>
+                    <h3>3D Generalist</h3>
                     <p>Created assets for various mobile and VR projects:</p>
                     <ul>
                         <li>- LOD models</li>
                         <li>- Developed shader systems</li>
-                        <li>- Implemented assets in Unity/Unreal</li>
+                        <li>- Implemented assets in Unity</li>
                     </ul>
                 </div>
             </div>
