--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
     // Zmień inicjalizację na najnowszą wersję
     (function() {
         emailjs.init({
-            publicKey: "i7UL2S1FZ8NIPqo63", // Upewnij się że klucz jest aktualny
+            publicKey: "p-dgQ7T-Ohy-QldSI", // Upewnij się że klucz jest aktualny
             blockHeadless: true,
             limitRate: {
                 id: 'portfolio',
